# pyct

./: .gitignore  AGENTS.md  CLAUDE.md  Justfile  SingleImageEx_Py.py  config.yaml  ct_cli.py  ct_cli_test.py  custom_layout.ini  detector.py  detector.py.back  detector_callback.py  detector_ser.py  detector_test.py  justfile  main.py  main2.py  pipe.py  pipe_client_test.py  pyct_app.py  pyproject.toml  requirements.txt  requirements_qt.txt  run_cal.py  run_recon.py  serial_controller.py  thread.py  thread_test.py  trans.py  user_custom_layout.ini
algorithm/: aCT_full_modify.py  conebeam.py  conebeam2.py  correction.py  fdk.py  fdk2.py  fdk_2.py  others.py  rotation.py  rtk.py  show.py  test.xml  transprj2tif.py
algorithm/astra/: CT_full_simplify_parallel_v2.py  conebeam.py  from.py  show.py  show_1228.py  test_ast.py
algorithm/calibration/: cal.py  cal_PC-20190315JISU_1月-23-114922-2024_Conflict.py  calk2
gui/: ct_control.py  ct_image.py  gui.py  helper.py  logger.py
qt_gui/: ctSlice.ui  dark_snap.ui  empty_snap.ui  gui.py  main.ui  main1.ui  projectSelector.ui  reconstruction.py  reconstruction.ui  restruction.ui  scan.ui  scan_window.py  snap.ui  snap_window.py  test.py
scripts/: build_win.ps1  offline_install_guide.md  pyct.spec  setup.iss
utils/: paths.py
