[project]
name = "pyct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "astra-toolbox>=2.4.1",
  "nibabel>=5.4.2",
  "numpy>=2.4.3",
  "opencv-python>=4.13.0.92",
  "pandas>=3.0.1",
  "pyyaml>=6.0.3",
  "requests>=2.33.0",
  "scikit-image>=0.26.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
